--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -1,7 +1,8 @@
 html,body,#app{
     height:100%;
     margin:0;
-    padding:0
+    padding:0;
+    min-width:1280px;
 }
 .el-breadcrumb{
     margin-bottom: 15px;
